mission5/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: auth-app
          servicePort: 80
        path: /login
      - backend:
          serviceName: auth-app
          servicePort: 80
        path: /signin
      - backend:
          serviceName: auth-app
          servicePort: 80
        path: /logout
      - backend:
          serviceName: auth-app
          servicePort: 80
        path: /register
      - backend:
          serviceName: auth-app
          servicePort: 80
        path: /auth

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-proxy
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-app.default.svc.cluster.local:80/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-UserId,X-First-Name,X-Last-Name"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: user-app
          servicePort: 80
        path: /users/me
      - backend:
          serviceName: user-app
          servicePort: 80
        path: /users/edit
